--- a/home.css
+++ b/home.css
@@ -13,6 +13,10 @@
   --white-color: #ffffff;
 }
 
+a {
+  text-decoration: none;
+}
+
 * {
   margin: 0%;
   padding: 0%;
@@ -84,6 +88,11 @@
   margin-top: 100px;
   width: 100%;
   height: 80vh;
+}
+
+.banner-wrapper .banner-container {
+  position: relative;
+  box-sizing: border-box;
 }
 
 .banner-wrapper .typing-section {
@@ -170,6 +179,57 @@
   align-items: center;
 }
 
+.banner-shadow-1 {
+  position: absolute;
+  top: -15%;
+  left: -17%;
+  width: 300px;
+  height: 300px;
+  background-color: var(--primary-color);
+  border-radius: 50%;
+  z-index: -1;
+  filter: blur(200px);
+  overflow: hidden;
+}
+
+.banner-shadow-2 {
+  position: absolute;
+  bottom: 20%;
+  right: 0%;
+  width: 300px;
+  height: 300px;
+  background-color: #98D8EF;
+  border-radius: 50%;
+  z-index: -1;
+  filter: blur(150px);
+  overflow: hidden;
+}
+
+.page-up {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  width: 50px;
+  height: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  opacity: 0;
+  visibility: hidden;
+  transform: translateY(300px);
+  border-radius: 50%;
+  background: #98D8EF;
+  color: var(--black-color);
+  cursor: pointer;
+  z-index: 1000;
+  transition: opacity 0.5s ease, transform 0.5s ease, visibility 0.5s;
+}
+
+.page-up.show {
+  visibility: visible;
+  opacity: 1;
+  transform: translateY(0);
+}
 
 /* Media Query - Banner */
 /* ============================================================================ */
@@ -187,6 +247,10 @@
   .banner-wrapper .hero-title {
     font-size: 40px;
   }
+
+  .banner-shadow-2 {
+    bottom: 0%;
+  }
 }
 
 @media screen and (max-width: 768px) {
@@ -201,6 +265,15 @@
   .banner-wrapper .hero-paragraph {
     margin-bottom: 32px;
   }
+
+  .banner-shadow-1 {
+    top: -20%;
+    left: -15%;
+  }
+
+  .banner-shadow-2 {
+    bottom: 0%;
+  }
 }
 
 @media screen and (max-width: 576px) {
@@ -212,6 +285,24 @@
   .banner-wrapper .hero-paragraph {
     font-size: 17px;
   }
+
+  .banner-shadow-1 {
+    top: -28%;
+    left: -35%;
+  }
+
+  .banner-shadow-2 {
+    bottom: 5%;
+    width: 230px;
+    height: 230px;
+  }
+  .page-up{
+    bottom: 10px;
+    right: 10px;
+    width: 35px;
+    height: 35px;
+    font-size: 12px;
+  }
 }
 
 
@@ -221,24 +312,145 @@
   width: 100%;
 }
 
-.features-wrapper .section-heading{
-  font-size: 44px;
+.features-wrapper .features-outer-container {
+  padding-top: 40px;
+  padding-bottom: 60px;
+}
+
+.features-wrapper .section-heading {
+  font-family: var(--font-primary);
+  font-size: 48px;
+  font-weight: 500;
+  word-spacing: 5px;
+}
+
+.features-wrapper .section-desc {
+  font-family: var(--font-secondary);
+  color: var(--sub-gray);
+  font-size: 18px;
+  font-weight: 400;
 }
 
 .features-wrapper .row .card {
   border: none;
-  /* border-radius: 10px; */
+  transition: all 0.5s ease,
 }
 
 .features-wrapper .row .card .feature-image img {
   border-radius: 10px;
 }
 
+.features-wrapper .row .card .card-body {
+  padding: 16px 8px;
+}
+
+.features-wrapper .row .card .card-body .feature-name,
+.features-wrapper .row .card .card-body i {
+  transition: color 0.3s ease;
+}
+
+.features-wrapper .row .card .card-body a:hover .feature-name,
+.features-wrapper .row .card .card-body a:hover i {
+  color: var(--primary-color);
+}
+
+.features-wrapper .row .card .card-body a:hover {
+  transform: scale(1.01);
+  transition: transform 0.3s ease;
+  cursor: pointer;
+}
+
+
+.features-wrapper .feature-name {
+  font-size: 18px;
+}
+
 
 /* Media Query - Features */
 /* ============================================================================ */
-@media screen and (max-width: 992px) {}
+@media screen and (max-width: 1400px) {
+  .features-wrapper .section-heading {
+    font-size: 44px;
+  }
+}
 
-@media screen and (max-width: 768px) {}
+@media screen and (max-width: 992px) {
+  .features-wrapper .section-heading {
+    font-size: 40px;
+  }
+}
 
-@media screen and (max-width: 576px) {}
+@media screen and (max-width: 768px) {
+  .features-wrapper .section-heading {
+    font-size: 32px;
+  }
+}
+
+@media screen and (max-width: 576px) {
+  .features-wrapper .section-desc {
+    font-size: 17px;
+  }
+}
+
+
+/* process */
+/* ============================================================================ */
+.process-wrapper{
+  width: 100%;
+  background-color: #efeff1;
+}
+
+.process-wrapper .process-container{
+  padding-top: 40px;
+  padding-bottom: 50px;
+}
+
+.process-wrapper .section-heading{
+  font-family: var(--font-primary);
+  font-size: 48px;
+  font-weight: 500;
+  word-spacing: 5px;
+}
+
+.process-wrapper .section-desc{
+  font-family: var(--font-secondary);
+  color: var(--sub-gray);
+  font-size: 18px;
+  font-weight: 400;
+}
+
+/* Media Query - process */
+/* ============================================================================ */
+@media screen and (max-width: 1400px) {
+  .process-wrapper .section-heading{
+    font-size: 44px;
+  }
+}
+
+@media screen and (max-width: 992px) {
+  .process-wrapper .section-heading{
+    font-size: 40px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .process-wrapper .section-heading{
+    font-size: 32px;
+  }
+}
+
+@media screen and (max-width: 576px) {
+  .process-wrapper .section-desc{
+    font-size: 17px;
+  }
+}
+
+
+/* Industries */
+/* ============================================================================ */
+.industry-wrapper{
+  
+}
+
+/* Media Query - Industries */
+/* ============================================================================ */
