--- a/home.css
+++ b/home.css
@@ -87,7 +87,7 @@ a {
 .banner-wrapper {
   margin-top: 100px;
   width: 100%;
-  height: 80vh;
+  height: 90vh;
 }
 
 .banner-wrapper .banner-container {
@@ -179,7 +179,7 @@ a {
   align-items: center;
 }
 
-.banner-shadow-1 {
+.banner-wrapper .banner-shadow-1 {
   position: absolute;
   top: -15%;
   left: -17%;
@@ -188,11 +188,11 @@ a {
   background-color: var(--primary-color);
   border-radius: 50%;
   z-index: -1;
-  filter: blur(200px);
+  filter: blur(190px);
   overflow: hidden;
 }
 
-.banner-shadow-2 {
+.banner-wrapper .banner-shadow-2 {
   position: absolute;
   bottom: 20%;
   right: 0%;
@@ -201,7 +201,7 @@ a {
   background-color: #98D8EF;
   border-radius: 50%;
   z-index: -1;
-  filter: blur(150px);
+  filter: blur(140px);
   overflow: hidden;
 }
 
@@ -282,13 +282,17 @@ a {
     height: auto;
   }
 
+  .banner-wrapper .static-text {
+    font-size: 24px;
+  }
+
   .banner-wrapper .hero-paragraph {
     font-size: 17px;
   }
 
   .banner-shadow-1 {
     top: -28%;
-    left: -35%;
+    left: -25%;
   }
 
   .banner-shadow-2 {
@@ -311,6 +315,7 @@ a {
 /* ============================================================================ */
 .features-wrapper {
   width: 100%;
+  position: relative;
 }
 
 .features-wrapper .features-outer-container {
@@ -334,7 +339,8 @@ a {
 
 .features-wrapper .row .card {
   border: none;
-  transition: all 0.5s ease,
+  transition: all 0.5s ease;
+  margin-bottom: 10px;
 }
 
 .features-wrapper .row .card .feature-image img {
@@ -366,6 +372,32 @@ a {
   font-size: 18px;
 }
 
+.features-wrapper .box-shadow-1 {
+  position: absolute;
+  top: 0%;
+  left: -10%;
+  width: 250px;
+  height: 250px;
+  background-color: var(--primary-color);
+  border-radius: 50%;
+  z-index: -1;
+  filter: blur(200px);
+  overflow: hidden;
+}
+
+.features-wrapper .box-shadow-2 {
+  position: absolute;
+  bottom: 0%;
+  right: 0%;
+  width: 300px;
+  height: 300px;
+  background-color: #98D8EF;
+  border-radius: 50%;
+  z-index: -1;
+  filter: blur(190px);
+  overflow: hidden;
+}
+
 
 /* Media Query - Features */
 /* ============================================================================ */
@@ -388,8 +420,22 @@ a {
 }
 
 @media screen and (max-width: 576px) {
+  .features-wrapper .features-outer-container{
+    padding-bottom: 45px;
+  }
+
   .features-wrapper .section-desc {
     font-size: 17px;
+  }
+
+  .features-wrapper .box-shadow-1 {
+    width: 200px;
+    height: 200px;
+  }
+
+  .features-wrapper .box-shadow-2 {
+    width: 250px;
+    height: 250px;
   }
 }
 
@@ -452,12 +498,14 @@ a {
 .industry-wrapper {
   width: 100%;
   margin-top: 30px;
-  margin-bottom: 30px;
+  margin-bottom: 15px;
 }
 
 .industry-wrapper .industry-container {
-  padding-top: 60px;
-  padding-bottom: 60px;
+  padding-top: 40px;
+  padding-bottom: 40px;
+  position: relative;
+  box-sizing: border-box;
 }
 
 .industry-wrapper .section-heading {
@@ -475,17 +523,28 @@ a {
 }
 
 .industry-wrapper .industry-container .row .card {
-  min-height: 450px;
+  min-height: 425px;
+  margin-bottom: 20px;
+  border-radius: 8px;
+  border: none;
+  background: (255, 255, 255, 0.2);
+  box-shadow: inset 0 4px 8px rgba(255, 255, 255, 0.2),
+    0 8px 16px rgba(0, 0, 0, 0.2);
 }
 
 .industry-wrapper .industry-container .row .card img {
   border-radius: 10px;
 }
 
+.industry-wrapper .industry-container .row .card .card-body {
+  padding: 12px;
+}
+
 .industry-wrapper .industry-name {
   font-family: var(--font-primary);
   font-size: 20px;
   font-weight: bold;
+  margin-bottom: 8px;
 }
 
 .industry-wrapper .industry-desc {
@@ -493,7 +552,23 @@ a {
   color: var(--sub-gray);
   font-size: 16px;
   font-weight: 400;
+  text-align: center;
 }
+
+.industry-wrapper .banner-shadow-1 {
+  position: absolute;
+  top: 55%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 250px;
+  height: 250px;
+  background-color: var(--primary-color);
+  border-radius: 50%;
+  z-index: -1;
+  filter: blur(260px);
+  overflow: hidden;
+}
+
 
 /* Media Query - Industries */
 /* ============================================================================ */
@@ -513,10 +588,284 @@ a {
   .industry-wrapper .section-heading {
     font-size: 32px;
   }
+
+  .industry-wrapper .industry-container .row .card {
+    margin-bottom: 15px;
+  }
 }
 
 @media screen and (max-width: 576px) {
+  .industry-wrapper{
+    margin-top: 10px;
+  }
   .industry-wrapper .section-desc {
     font-size: 17px;
   }
+
+  .industry-wrapper .industry-container .row .card .card-body {
+    padding-bottom: 16px;
+  }
+
+  .industry-wrapper .banner-shadow-1 {
+    width: 200px;
+    height: 200px;
+  }
+}
+
+
+/* Achievements */
+/* ============================================================================ */
+.Achievement-wrapper {
+  width: 100%;
+  background-color: #efeff1;
+}
+
+.Achievement-wrapper .Achievement-container {
+  padding-top: 60px;
+  padding-bottom: 50px;
+}
+
+.Achievement-wrapper .section-heading {
+  font-family: var(--font-primary);
+  font-size: 48px;
+  font-weight: 500;
+  word-spacing: 5px;
+}
+
+.Achievement-wrapper .section-desc {
+  font-family: var(--font-secondary);
+  color: var(--sub-gray);
+  font-size: 18px;
+  font-weight: 400;
+}
+
+.Achievement-wrapper .Achievement-container .image-section .img-fluid {
+  box-shadow: inset 0 4px 8px rgba(255, 255, 255, 0.009),
+    0 8px 16px rgba(0, 0, 0, 0.2);
+}
+
+.Achievement-wrapper .content-section .content {
+  margin-bottom: 26px;
+}
+
+.Achievement-wrapper .content-section .content .achievement-count {
+  font-family: var(--font-primary);
+  font-size: 42px;
+  font-weight: 500;
+  word-spacing: 5px;
+}
+
+.Achievement-wrapper .content-section .content .achievement-content {
+  font-family: var(--font-secondary);
+  color: var(--sub-gray);
+  font-size: 18px;
+  font-weight: 500;
+}
+
+
+/* Media Query - Achievements */
+/* ============================================================================ */
+@media screen and (max-width: 1400px) {
+  .Achievement-wrapper .section-heading {
+    font-size: 44px;
+  }
+}
+
+@media screen and (max-width: 992px) {
+  .Achievement-wrapper .section-heading {
+    font-size: 40px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .Achievement-wrapper .section-heading {
+    font-size: 32px;
+  }
+
+  .Achievement-wrapper .content-section .content .achievement-count {
+    font-size: 40px;
+  }
+}
+
+@media screen and (max-width: 576px) {
+  .Achievement-wrapper .section-desc {
+    font-size: 17px;
+  }
+
+  .Achievement-wrapper .content-section .content .achievement-count {
+    font-size: 36px;
+  }
+
+  .Achievement-wrapper .content-section .content .achievement-content {
+    font-size: 16px;
+  }
+}
+
+
+/* Solutions */
+/* ============================================================================ */
+.solution-wrapper {
+  width: 100%;
+}
+
+.solution-wrapper .solution-container {
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+
+.solution-wrapper .section-heading {
+  font-family: var(--font-primary);
+  font-size: 48px;
+  font-weight: 500;
+  word-spacing: 5px;
+}
+
+.solution-wrapper .section-desc {
+  font-family: var(--font-secondary);
+  color: var(--sub-gray);
+  font-size: 18px;
+  font-weight: 400;
+}
+
+
+.solution-wrapper .solution-card {
+  transition: all 0.3 ease-in-out;
+  padding: 10px;
+  border-radius: 10px;
+}
+
+.solution-wrapper .solution-card:hover {
+  box-shadow: 0 10px 15px rgba(0, 0, 0, 0.2),
+    inset 0 4px 6px rgba(255, 255, 255, 0.2);
+}
+
+.solution-wrapper .solution-card .solution-icon{
+  transition: all 0.2s ease-in-out;
+}
+
+.solution-wrapper .solution-card:hover .solution-icon {
+  color: #E52333;
+}
+
+.solution-wrapper .solution-card .fa-arrow-right {
+  opacity: 0;
+  visibility: hidden;
+  transform: translateX(-10px); 
+  transition: all 0.4s ease-in-out;
+}
+
+.solution-wrapper .solution-card:hover .fa-arrow-right {
+  opacity: 1;
+  visibility: visible;
+  transform: translateX(0);
+}
+
+.solution-wrapper .fa-circle-check {
+  color: #E52333;
+}
+
+
+/* Media Query - Solutions */
+/* ============================================================================ */
+@media screen and (max-width: 1400px) {
+  .solution-wrapper .section-heading {
+    font-size: 44px;
+  }
+}
+
+@media screen and (max-width: 992px) {
+  .solution-wrapper .section-heading {
+    font-size: 40px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .solution-wrapper .section-heading {
+    font-size: 32px;
+  }
+}
+
+@media screen and (max-width: 576px) {
+  .solution-wrapper .section-desc {
+    font-size: 17px;
+  }
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.illustration {
+  flex: 1;
+}
+
+.illustration img {
+  width: 100%;
+
+}
+
+.solution-wrapper .content {
+  flex: 2;
+  margin-left: 20px;
+}
+
+.solution-wrapper .content h2 {
+  font-size: 2rem;
+  color: #2a2a2a;
+  margin-bottom: 10px;
+}
+
+.solution-wrapper .content p {
+  font-size: 1rem;
+  color: #555;
+  line-height: 1.6;
+  margin-bottom: 20px;
+}
+
+.features {
+  list-style: none;
+  padding: 0;
+}
+
+.features li {
+  display: flex;
+  align-items: flex-start;
+  margin-bottom: 15px;
+  background: #fff;
+  padding: 15px;
+  border-radius: 8px;
+
+}
+
+.features li .icon {
+  font-size: 2rem;
+  margin-right: 15px;
+  color: #6a6a6a;
+}
+
+.features li .text {
+  flex: 1;
+}
+
+.features li .text h3 {
+  margin: 0;
+  font-size: 1.2rem;
+  color: #2a2a2a;
+}
+
+.features li .text p {
+  margin: 5px 0 0;
+  color: #555;
+  font-size: 0.9rem;
 }
