--- a/home.css
+++ b/home.css
@@ -73,34 +73,34 @@ a {
 /* navbar-toggler-icon */
 /* =============================== */
 .navbar-toggler {
-  border: none; 
-  background: transparent; 
+  border: none;
+  background: transparent;
   padding: 0;
   outline: none;
 }
 
 .navbar-toggler:focus,
 .navbar-toggler:active {
-  outline: none; 
-  box-shadow: none; 
+  outline: none;
+  box-shadow: none;
 }
 
 .navbar-toggler .navbar-toggler-icon {
   color: red;
-  background-color: red; 
+  background-color: red;
 }
 
 .navbar-toggler .navbar-toggler-icon {
-  color: red; 
-  font-size: 22px; 
+  color: red;
+  font-size: 22px;
 }
 
 .navbar-toggler-icon {
-  background-image: none; 
+  background-image: none;
   display: inline-block;
   width: 1.5em;
   height: 1.5em;
-  background-color: red; 
+  background-color: red;
   mask: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3E%3Cpath stroke='rgba%280, 0, 0, 1%29' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3E%3C/svg%3E");
   -webkit-mask: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3E%3Cpath stroke='rgba%280, 0, 0, 1%29' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3E%3C/svg%3E");
 }
@@ -249,12 +249,12 @@ a {
   align-items: center;
   font-family: 'Arial', sans-serif;
   font-size: 2rem;
-  color: #4A4A4A;
+  color: var(--white-color);
   display: inline-flex;
   /* display: flex; */
   align-items: center;
   margin-bottom: 4px;
-  background: #FFF574;
+  background: var(--black-color);
   border-radius: 10px;
 }
 
@@ -270,7 +270,7 @@ a {
 .banner-wrapper .static-text {
   font-size: 32px;
   font-weight: bold;
-  color: #606061;
+  color: var(--white-color);
 }
 
 .banner-wrapper .cursor {
@@ -350,12 +350,12 @@ a {
   position: absolute;
   bottom: 15%;
   right: 0%;
-  width: 300px;
-  height: 300px;
-  background-color: #98D8EF;
+  width: 150px;
+  height: 150px;
+  background-color: var(--primary-color);
   border-radius: 50%;
   z-index: -1;
-  filter: blur(150px);
+  filter: blur(180px);
   overflow: hidden;
 }
 
@@ -453,8 +453,8 @@ a {
 
   .banner-wrapper .banner-shadow-2 {
     bottom: 0%;
-    width: 250px;
-    height: 250px;
+    width: 150px;
+    height: 150px;
   }
 
   .page-up {
@@ -546,12 +546,12 @@ a {
   position: absolute;
   bottom: 0%;
   right: 0%;
-  width: 300px;
-  height: 300px;
-  background-color: #98D8EF;
+  width: 200px;
+  height: 200px;
+  background-color: var(--primary-color);
   border-radius: 50%;
   z-index: -1;
-  filter: blur(190px);
+  filter: blur(200px);
   overflow: hidden;
 }
 
@@ -589,6 +589,7 @@ a {
     width: 200px;
     height: 200px;
   }
+
   .features-wrapper .banner-shadow-1 {
     width: 50px;
     height: 50px;
@@ -597,62 +598,8 @@ a {
   }
 
   .features-wrapper .box-shadow-2 {
-    width: 250px;
-    height: 250px;
-  }
-}
-
-
-/* process */
-/* ============================================================================ */
-.process-wrapper {
-  width: 100%;
-  background-color: #efeff1;
-}
-
-.process-wrapper .process-container {
-  padding-top: 50px;
-  padding-bottom: 60px;
-}
-
-.process-wrapper .section-heading {
-  font-family: var(--font-primary);
-  font-size: 48px;
-  font-weight: 500;
-  word-spacing: 5px;
-}
-
-.process-wrapper .section-desc {
-  font-family: var(--font-secondary);
-  color: var(--primary-color);
-  text-transform: capitalize;
-  font-size: 18px;
-  font-weight: 400;
-}
-
-/* Media Query - process */
-/* ============================================================================ */
-@media screen and (max-width: 1400px) {
-  .process-wrapper .section-heading {
-    font-size: 44px;
-  }
-}
-
-@media screen and (max-width: 992px) {
-  .process-wrapper .section-heading {
-    font-size: 40px;
-  }
-}
-
-@media screen and (max-width: 768px) {
-  .process-wrapper .section-heading {
-    font-size: 32px;
-  }
-}
-
-@media screen and (max-width: 576px) {
-  .process-wrapper .section-desc {
-    font-size: 17px;
+    width: 180px;
+    height: 180px;
   }
 }
 
@@ -688,7 +635,7 @@ a {
 }
 
 .industry-wrapper .industry-container .row .card {
-  min-height: 425px;
+  /* min-height: 425px; */
   margin-bottom: 20px;
   border-radius: 8px;
   border: none;
@@ -783,7 +730,7 @@ a {
 /* ============================================================================ */
 .Achievement-wrapper {
   width: 100%;
-  background-color: #efeff1;
+  /* background-color: #efeff1; */
 }
 
 .Achievement-wrapper .Achievement-container {
@@ -840,10 +787,10 @@ a {
   transform: translate(-50%, -50%);
   width: 200px;
   height: 200px;
-  background: #98D8EF;
+  background: var(--primary-color);
   border-radius: 50%;
-  z-index: 2;
-  filter: blur(130px);
+  z-index: -1;
+  filter: blur(200px);
   overflow: hidden;
 }
 
@@ -886,6 +833,11 @@ a {
 
   .Achievement-wrapper .content-section .content .achievement-content {
     font-size: 16px;
+  }
+
+  .Achievement-wrapper .Achievement-container .content-section .banner-shadow {
+    width: 120px;
+    height: 120px;
   }
 }
 
@@ -992,10 +944,9 @@ a {
   width: 210px;
   height: 210px;
   background-color: var(--primary-color);
-  background: #98D8EF;
   border-radius: 50%;
   z-index: -1;
-  filter: blur(110px);
+  filter: blur(200px);
   overflow: hidden;
 }
 
@@ -1055,10 +1006,83 @@ a {
   }
 
   .solution-wrapper .row .content-section .banner-shadow {
-    width: 110px;
-    height: 110px;
+    width: 170px;
+    height: 170px;
+    filter: blur(150px);
   }
 }
+
+
+/* Request Demo */
+/* ============================================================================ */
+.requestDemo-Wrapper {
+  width: 100%;
+  background: #000;
+}
+
+.requestDemo-Wrapper .requestDemo-container {
+  padding: 90px 0;
+}
+
+.requestDemo-Wrapper h1 {
+  font-size: 50px;
+  color: var(--white-color);
+}
+
+.requestDemo-Wrapper p {
+  font-size: 20px;
+  color: var(--primary-color);
+  margin-bottom: 30px;
+}
+
+.requestDemo-Wrapper a {
+  background-color: var(--white-color);
+  color: var(--black-color);
+  padding: 10px 12px;
+  border-radius: 5px;
+  font-size: 16px;
+  transition: all 0.2s ease-in-out;
+}
+
+.requestDemo-Wrapper a:hover {
+  background: #4b5563;
+  color: #efeff1;
+}
+
+
+/* Request Demo - Media Query*/
+/* ============================================================================ */
+@media screen and (max-width: 1400px) {}
+
+@media screen and (max-width: 992px) {}
+
+@media screen and (max-width: 768px) {
+  .requestDemo-Wrapper .requestDemo-container {
+    padding: 50px 0;
+  }
+  
+  .requestDemo-Wrapper h1 {
+    font-size: 36px;
+  }
+
+  .requestDemo-Wrapper p {
+    font-size: 18px;
+  }
+}
+
+@media screen and (max-width: 576px) {
+  .requestDemo-Wrapper h1 {
+    font-size: 26px;
+  }
+
+  .requestDemo-Wrapper p {
+    font-size: 17px;
+  }
+  .requestDemo-Wrapper a{
+    font-size: 14px;
+  }
+}
+
 
 
 /* Logo-Slider */
@@ -1100,7 +1124,8 @@ a {
 .brand-wrapper .logos {
   overflow: hidden;
   padding: 50px 0;
-  background: white;
+  border-radius: 20px;
+  background: transparent;
   white-space: nowrap;
   position: relative;
 }
@@ -1370,7 +1395,7 @@ a {
 
 .Powered-wrapper .info {
   text-align: center;
-  margin-bottom: 20px;
+  margin-bottom: 30px;
 }
 
 .Powered-wrapper .info i {
@@ -1391,6 +1416,49 @@ a {
 
 .Powered-wrapper .info a:hover {
   color: var(--primary-color);
+}
+
+.newsletter {
+  display: flex;
+  align-items: center;
+  border: 1px solid #333;
+  border-radius: 25px;
+  overflow: hidden;
+  width: 95%;
+  max-width: 300px;
+  margin: 0 auto;
+}
+
+.newsletter input {
+  flex: 1;
+  min-width: 0;
+  padding: 10px;
+  border: none;
+  outline: none;
+  font-size: 16px;
+}
+
+.newsletter button {
+  background-color: #333;
+  color: white;
+  border: none;
+  padding: 15px 15px;
+  /* border-top-left-radius: 10px;
+  border-bottom-left-radius: 10px; */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  transition: all 0.3s ease-in-out;
+  min-width: 40px;
+}
+
+.newsletter button i {
+  font-size: 16px !important;
+}
+
+.newsletter button:hover {
+  background-color: #1f2937;
 }
 
 .Powered-wrapper .logo-container {
